--- a/package.json
+++ b/package.json
@@ -3,15 +3,25 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
+    "astro": "astro",
     "build": "astro check && astro build",
+    "dev": "astro dev",
     "preview": "astro preview",
-    "astro": "astro"
+    "start": "astro dev"
   },
   "dependencies": {
-    "astro": "^4.15.9",
     "@astrojs/check": "^0.9.3",
-    "typescript": "^5.6.2"
+    "astro": "^4.15.9",
+    "astro-sst": "2.43.5",
+    "sst": "3.1.49",
+    "typescript": "^5.6.2",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@aws-sdk/client-dynamodb": "^3.665.0",
+    "@types/aws-lambda": "^8.10.145",
+    "@types/uuid": "^10.0.0",
+    "aws-lambda": "^1.0.7",
+    "prettier": "^3.3.3"
   }
 }
